Se lee y escribe la imagen, falta crear la escala de grises y clasificar. (Hay un error en una de las imagenes de prueba, no se ve exactamente igual.)

--- a/lab_1/makefile
+++ b/lab_1/makefile
@@ -1,12 +1,15 @@
 CC=gcc
 route=
 
-all: main.o funciones.o
-	$(CC) main.o funciones.o -o main -Wall -I.
-	rm main.o funciones.o
+all: main.o funciones.o bmp.o
+	$(CC) main.o funciones.o bmp.o -o main -Wall -I.
+	rm main.o funciones.o bmp.o
 
 main.o: $(route)main.c
 	$(CC) -c $(route)main.c
+
+bmp.o: $(route)bmp.c
+	$(CC) -c $(route)bmp.c
 
 funciones.o: $(route)funciones.c
 	$(CC) -c $(route)funciones.c
