--- a/lab_1/makefile
+++ b/lab_1/makefile
@@ -1,9 +1,9 @@
 CC=gcc
 route=
 
-all: main.o funciones.o bmp.o
-	$(CC) main.o funciones.o bmp.o -o main -Wall -I.
-	rm main.o funciones.o bmp.o
+all: main.o function.o bmp.o
+	$(CC) main.o function.o bmp.o -o main -Wall -I.
+	rm main.o function.o bmp.o
 
 main.o: $(route)main.c
 	$(CC) -c $(route)main.c
@@ -11,5 +11,5 @@ main.o: $(route)main.c
 bmp.o: $(route)bmp.c
 	$(CC) -c $(route)bmp.c
 
-funciones.o: $(route)funciones.c
-	$(CC) -c $(route)funciones.c
+function.o: $(route)function.c
+	$(CC) -c $(route)function.c
