--- a/lab_1/.vscode/settings.json
+++ b/lab_1/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "files.associations": {
-        "encabezados.h": "c",
-        "string.h": "c",
+        "function.h": "c",
+        "struct.h": "c",
         "stdio.h": "c"
     }
 }
