--- a/lab_2/Makefile
+++ b/lab_2/Makefile
@@ -1,10 +1,11 @@
 CC=gcc
 route=
 
-all: main.o readImage.o 
+all: main.o readImage.o bmp.o scaleGray.o
 	$(CC) main.o -o main -Wall -I.
-	$(CC) readImage.o -o readImage -Wall -I.
-	rm main.o readImage.o 
+	$(CC) readImage.o bmp.o -o readImage -Wall -I.
+	$(CC) scaleGray.o -o scaleGray -Wall -I.
+	rm main.o readImage.o bmp.o scaleGray.o
 
 main.o: $(route)main.c
 	$(CC) -c $(route)main.c
@@ -15,5 +16,8 @@ main.o: $(route)main.c
 readImage.o: $(route)readImage.c
 	$(CC) -c $(route)readImage.c
 
-# scaleGray.o: $(route)scaleGray.c
-# 	$(CC) -c $(route)scaleGray.c
+bmp.o: $(route)bmp.c
+	$(CC) -c $(route)bmp.c
+
+scaleGray.o: $(route)scaleGray.c
+	$(CC) -c $(route)scaleGray.c
