Termina ejecución, pero no realiza ciertos printf, da a entender que se ejecuta incorrectamente.

--- a/lab_sistope_2/.vscode/settings.json
+++ b/lab_sistope_2/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "stdio.h": "c",
+        "iterator": "c"
     }
 }
