--- a/lab_sistope_2/Makefile
+++ b/lab_sistope_2/Makefile
@@ -3,9 +3,9 @@ route=
 
 all: main.o readImage.o bmp.o scaleGray.o
 	$(CC) main.o -o main -Wall -I.
-	$(CC) readImage.o -o readImage bmp.o -Wall -I.
+	$(CC) readImage.o bmp.o -o readImage -Wall -I.
 	$(CC) scaleGray.o -o scaleGray -Wall -I.
-	rm main.o readImage.o 
+	rm main.o readImage.o bmp.o scaleGray.o
 
 main.o: $(route)main.c
 	$(CC) -c $(route)main.c
