Errores de ejecucion, scaleGray no finaliza

--- a/lab_sistope_2/Makefile
+++ b/lab_sistope_2/Makefile
@@ -5,7 +5,10 @@ all: main.o readImage.o bmp.o scaleGray.o
 	$(CC) main.o -o main -Wall -I.
 	$(CC) readImage.o bmp.o -o readImage -Wall -I.
 	$(CC) scaleGray.o -o scaleGray -Wall -I.
-	rm main.o readImage.o bmp.o scaleGray.o
+	$(CC) binaryImage.c -o binaryImage -Wall -I.
+	$(CC) analisisImage.c -o analisisImage -Wall -I.
+	$(CC) writeImage.c -o writeImage -Wall -I.
+	rm *.o
 
 main.o: $(route)main.c
 	$(CC) -c $(route)main.c
@@ -18,3 +21,12 @@ bmp.o: $(route)bmp.c
 
 scaleGray.o: $(route)scaleGray.c
 	$(CC) -c $(route)scaleGray.c
+
+binaryImage.o: $(route)binaryImage.c
+	$(CC) -c $(route)binaryImage.c
+
+analisisImage.o: $(route)analisisImage.c
+	$(CC) -c $(route)analisisImage.c
+
+writeImage.o: $(route)writeImage.c
+	$(CC) -c $(route)writeImage.c
