--- a/lab_sistope_2/.vscode/settings.json
+++ b/lab_sistope_2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "stdio.h": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "types.h": "c"
     }
 }
