--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "string.h": "c",
         "function.h": "c",
         "memory": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "iostream": "cpp"
     }
 }
