--- a/lab_4/Makefile
+++ b/lab_4/Makefile
@@ -1,3 +1,3 @@
 all:
-	../u++-7.0.0/bin/u++ ./src/main.cpp ./src/Pipeline/Pipeline.cpp ./src/Pipeline/ReadImage/ReadImage.cpp -o main
+	../u++-7.0.0/bin/u++ ./src/main.cpp ./src/Pipeline/Pipeline.cpp ./src/Pipeline/ReadImage/ReadImage.cpp ./src/Bmp/Bmp.cpp -o main
 	clear
